site/styles/_forms.scss
label {
  font-size: 14px;
  font-weight: $font-weight-normal;
}
// Form Container Defaults
s72-signin-form,
s72-signup-form,
s72-forgotpassword-form,
s72-resetpassword-form,
s72-acceptinvite-form,
s72-useraccount-form,
s72-activatedevice-form,
.form-container {
  display: block;
  max-width: 400px;
  width: 100%;
  margin: 0 auto;
  padding-bottom: 60px;
}
// Password Form Group
.s72-account-password-form-group .s72-control-inputs {
  display: flex;
  .s72-form-control-static { flex: 1; }
}
// Combined Auth
.s72-combined-auth {
  @include media-breakpoint-up(sm){
    .s72-form-group-password,
    .s72-form-group-password2 {
      float: left;
      width: 50%;
    }
    .s72-form-group-password { padding-right: $grid-gutter-width / 2; }
    .s72-form-group-password2 { padding-left: $grid-gutter-width / 2; }
    clear: left;
  }
}
// Unsure currently what this does
.form-block {
  max-width: 400px;
  width: 100%;
  margin: 0 auto;
}
// This needs to be fixed / changed - doesnt need it and could be attached to another div
.page-form {
  padding: 10px 20px;
  @include media-breakpoint-up(md){
    padding: 20px 50px;
  }
}
// Navbar Search Form Input Control
.navbar-nav-search {
.form-control-search {
  font-weight: $font-weight-normal;
  transition: all .25s ease-out;
  @include hover-focus {
    color: #000;
    background-color: #fff;
    border-color: #fff;
    &::placeholder {
      color: #000;
    }
  }
}
}
// Error Messaging
.s72-error-message {
  background: rgba($body-color, 0.1);
  color: $body-color;
  font-weight: $font-weight-normal;
  border-radius: 3px;
  margin-top: 10px;
  position: relative;
  padding: 5px 8px;
  &:before {
    content: '';
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 5px 5px 5px;
    border-color: transparent transparent rgba($body-color, 0.1) transparent;
    position: absolute;
    left: 10px;
    top: -5px;
  }
}
// DOB Datepicker
.s72-datepicker {
  @extend .d-flex;
  flex-direction: row;
  justify-content: space-between;
  .s72-form-control {
    width: auto;
  }
}
// Form Control Default
.s72-form-control {
  font-weight: $font-weight-normal;
}
// Account Page Change Password Field
.s72-form-control-static {
  color: $body-color;
  font-size: 30px;
  border-radius: 6px 0 0 6px;
  padding: 0.375rem 0.75rem 0 0.75em;
  line-height: 34px;
  display: inline-block;
  background: rgba($body-color, 0.1);
}
// Change Password Overlay
.s72-shopping-modal {
  .s72-modal-closable {
    .s72-modal-dialog {
      @include media-breakpoint-up(md) {
        margin: 90px auto 0 auto !important;
        max-width: 400px;
      }
    }
  }
}
.s72-modal-closable {
    .s72-modal-dialog {
      @include media-breakpoint-up(md) {
        margin: 90px auto 0 auto !important;
      }
    }
  }
.s72-modal-container {
  .s72-buttons {
    .s72-btn {
      color: $button-text-color;
      &:hover {
        color: $button-text-color-hover;
      }
    }
  }
}
.s72-modal-backdrop {
  opacity: .8;
}
.s72-modal-closable {
  .s72-modal-dialog {
    margin: auto;
  }
}
.s72-modal-content {
  color: $body-color; 
  background: $body-bg;
  padding: 20px 10px;
  border: 1px solid rgba(255, 255, 255, 0.1);

  .s72-modal-header {
    padding: 20px;
    border-bottom: 0 none;
    .s72-modal-title {
      font-size: 20px;
      color: $body-color; 
      font-weight: $font-weight-bold;
      line-height: auto;
    }
  }
  .s72-modal-body {
    padding: 0 20px;
  }
  .s72-modal-footer {
    border-top: 0 none;
    .s72-btn-modal-cancel {
      border-color: transparent;
      margin-right: $grid-gutter-width / 3;
    }
  }
}

.form-check {
  display: inline-block !important;
}

.s72-btn {
  &.s72-btn-modal-close {
    top: 11px;
  }
}

s72-signup-form {
  .s72-form-text {
    margin-bottom: 1rem;
  }
}

